# rustyload

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: TECHNICAL_GUIDE.md
src/: client.rs  interactive.rs  main.rs
src/protocols/: flashkv.rs  http.rs  mod.rs
