[package]
name = "rustyload"
version = "0.2.0"
edition = "2021"
authors = ["Ariz"]
description = "A blazingly fast, concurrent HTTP load testing tool built in Rust"
license = "MIT"
repository = "https://github.com/yourusername/rustyload"
keywords = ["http", "load-testing", "benchmark", "performance", "cli"]
categories = ["command-line-utilities", "development-tools::profiling", "web-programming::http-client"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
